# otterbrix

./: .gitignore  BIG_DATACHUNK_TO_FIX.md  CMakeLists.txt  README.md  bench_compare.py  bench_compare_2.py  bench_compare_3.py  bench_compare_4.py  build.sh  conanfile.py  lsan.supp
JSONBench/otterbrix/: CMakeLists.txt  jsonbench.cpp
benchmark/runner/: CMakeLists.txt  benchmark.hpp  benchmark_configuration.hpp  benchmark_runner.cpp  interpreted_benchmark.cpp  main.cpp  sql_benchmark.cpp  sql_benchmark.hpp
components/catalog/: CMakeLists.txt  alter_column_validators.cpp  alter_column_validators.hpp  builtin_seed.cpp  builtin_seed.hpp  cascade_planner.cpp  cascade_planner.hpp  catalog.cpp  catalog.hpp  catalog_codes.hpp  catalog_oids.hpp  catalog_write.hpp  check_predicate_compiler.cpp  check_predicate_compiler.hpp  computed_schema.cpp  computed_schema.hpp  constraint_evaluator.cpp  constraint_evaluator.hpp  ddl_metadata_builder.cpp  ddl_metadata_builder.hpp  dec43_alter_validators.cpp  dec43_alter_validators.hpp  dependency_walker.cpp  dependency_walker.hpp  fk_info.hpp  fk_rules.hpp  helpers.cpp  helpers.hpp  namespace_storage.cpp  namespace_storage.hpp  oid_batch.hpp  pg_catalog_decoders.cpp  pg_catalog_decoders.hpp  pg_row_builder.hpp  schema.cpp  schema.hpp  system_table_schemas.cpp  system_table_schemas.hpp  table_id.cpp  table_id.hpp  (+2 more)
components/catalog/results/: ddl_result.hpp  fk_result.hpp  resolve_result.hpp
components/catalog/tests/: CMakeLists.txt  test_catalog.cpp  test_invalidation_ring.cpp  test_oids.cpp  test_set_membership_filter.cpp  test_system_schemas.cpp  test_transactions.cpp  test_type_spec_roundtrip.cpp
components/catalog/transaction/: metadata_transaction.cpp  transaction_scope.cpp
components/index/test/: CMakeLists.txt  create_index.cpp  test_create_index.cpp  test_hash_single_field_index.cpp  test_index_mvcc.cpp  test_logical_value_binary_codec.cpp  test_single_field_index.cpp  test_vector_index.cpp
components/logical_plan/: CMakeLists.txt  execution_plan.hpp  forward.cpp  forward.hpp  identifier_types.hpp  node.cpp  node.hpp  node_abort_transaction.cpp  node_abort_transaction.hpp  node_aggregate.cpp  node_aggregate.hpp  node_allocate_oids.cpp  node_allocate_oids.hpp  node_alter_column.cpp  node_alter_column.hpp  node_alter_column_add.cpp  node_alter_column_add.hpp  node_alter_column_drop.cpp  node_alter_column_drop.hpp  node_alter_column_rename.cpp  node_alter_column_rename.hpp  node_alter_table.cpp  node_alter_table.hpp  node_begin_transaction.hpp  node_catalog_resolve.cpp  node_catalog_resolve.hpp  node_catalog_resolve_constraint.cpp  node_catalog_resolve_constraint.hpp  node_catalog_resolve_database.hpp  node_catalog_resolve_function.cpp  node_catalog_resolve_function.hpp  node_catalog_resolve_namespace.cpp  node_catalog_resolve_namespace.hpp  node_catalog_resolve_table.cpp  node_catalog_resolve_table.hpp  node_catalog_resolve_type.cpp  node_catalog_resolve_type.hpp  node_check_constraint.cpp  node_check_constraint.hpp  node_checkpoint.cpp  (+95 more)
components/logical_plan/substrait_adapter/: from_substrait.cpp  from_substrait.hpp  substrait_adapter_types.cpp  substrait_adapter_types.hpp  substrait_expression_exporter.cpp  substrait_expression_exporter.hpp  substrait_expression_importer.cpp  substrait_expression_importer.hpp  substrait_extension_contracts.cpp  substrait_extension_contracts.hpp  substrait_function_mapping.cpp  substrait_function_mapping.hpp  substrait_type_mapping.cpp  substrait_type_mapping.hpp  to_substrait.cpp  to_substrait.hpp
components/physical_plan/: CMakeLists.txt
components/physical_plan/operators/: aggregation.cpp  aggregation.hpp  alter_validators.cpp  alter_validators.hpp  arithmetic_eval.cpp  arithmetic_eval.hpp  catalog_write_helpers.hpp  operator.cpp  operator.hpp  operator_abort_transaction.cpp  operator_abort_transaction.hpp  operator_add_index.cpp  operator_add_index.hpp  (+116 more)
components/vector_search/: CMakeLists.txt  distance_metrics.hpp  hnsw_index.cpp  hnsw_index.hpp  knn_search.hpp  top_k_heap.hpp
services/: CMakeLists.txt
services/collection/: collection.hpp  context_storage.hpp  create_index.cpp  executor.cpp  executor.hpp  route.hpp
services/disk/: CMakeLists.txt  agent_disk.cpp  agent_disk.hpp  catalog_storage.cpp  catalog_storage.hpp  command.hpp  ddl_result.hpp  dependency_walker.cpp  dependency_walker.hpp  disk.cpp  disk.hpp  disk_contract.hpp  index_agent_disk.cpp  index_agent_disk.hpp  index_disk.cpp  inline_scan.hpp  invalidation_ring_buffer.cpp  invalidation_ring_buffer.hpp  manager_disk.cpp  manager_disk.hpp  manager_disk_bootstrap.cpp  manager_disk_ddl.cpp  manager_disk_impl.hpp  manager_disk_io.cpp  manager_disk_resolve.cpp  manager_disk_storage.cpp  resolve_result.hpp  result.cpp  result.hpp
services/dispatcher/: CMakeLists.txt  catalog_view.cpp  catalog_view.hpp  ddl.cpp  dispatcher.cpp  dispatcher.hpp  enrich_logical_plan.cpp  enrich_logical_plan.hpp  plan_resolve_index.hpp  resolve_type.cpp  resolve_type.hpp  resolved_objects.hpp  txn_messages.hpp  type_erased_senders.hpp  validate_logical_plan.cpp  validate_logical_plan.hpp  versioned_plan_cache.cpp  versioned_plan_cache.hpp
services/index/: CMakeLists.txt  bitcask_hash_key_loader.cpp  bitcask_index_disk.cpp  bitcask_index_disk.hpp  bitcask_task_executor.cpp  bitcask_task_executor.hpp  btree_index_disk.cpp  btree_index_disk.hpp  disk_hash_table.cpp  disk_hash_table.hpp  index_agent_disk.cpp  index_agent_disk.hpp  index_contract.hpp  index_disk.cpp  index_disk.hpp  index_result.hpp  index_table_agent.cpp  index_table_agent.hpp  manager_index.cpp  manager_index.hpp
services/loader/: loaded_state.hpp  loader.cpp  loader.hpp
services/memory_storage/: context_storage.hpp  memory_storage.cpp  memory_storage.hpp
services/wal/: dto.cpp  dto.hpp  manager_wal_replicate.cpp  manager_wal_replicate.hpp  record.hpp  wal.cpp  wal.hpp  wal_binary.cpp  wal_binary.hpp  wal_contract.hpp  wal_page.cpp  wal_page.hpp  wal_page_reader.cpp  wal_page_reader.hpp  wal_page_writer.cpp  wal_page_writer.hpp  wal_reader.cpp  wal_reader.hpp  wal_sync_mode.hpp
(+1119 files in other folders)
