[package]
name = "sqlx-otterbrix"
version = "0.1.0"
edition = "2021"
description = "SQLx driver for Otterbrix"
license = "BSD-3-Clause"

[dependencies]
either = "1"
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
log = { version = "0.4", default-features = false }
otterbrix = { version = "0.1.0", path = "../otterbrix" }
sqlx-core = { version = "=0.8.6", default-features = false, features = ["_rt-tokio"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }

[dev-dependencies]
sqlx = { version = "=0.8.6", default-features = false, features = ["runtime-tokio"] }
tempfile = "3"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros"] }
